GA-32: Grocery item
**Changes:**

- refactoring

- integration tests are not yet available

**References:**

- https://joliverestampador.atlassian.net/browse/GA-32